--- a/index.html
+++ b/index.html
@@ -1022,8 +1022,8 @@ function removeDiacritics(str) {
     <div class="sub-footer">
       <nav>
         <a class="terms" target="_blank" href="https://datamb.football/privacy">Privacy</a>
-        <a class="privacy" target="_blank" href="mailto:datamb.football@gmail.com">Contact</a>
-        <a class="glossary" target="_blank" href="https://datamb.football/glossary">Glossary</a>
+                <a class="privacy" href="https://datamb.football/glossary#contact">Contact</a>
+        <a class="glossary" href="https://datamb.football/glossary#aboutus">About</a>
       </nav>
       <nav>
         <a target="_blank" href="https://twitter.com/datamb_">
