--- a/index.html
+++ b/index.html
@@ -676,20 +676,20 @@ header a {
 
 <header class="header">
   <div class="logo">
-    <a href="http://datamb.football">
+    <a href="https://datamb.football">
         <img src="https://datamb.football/logo.png" alt="Player and team comparisons" /></a>
-    <div class="logo-text"><a href="http://datamb.football"></a></div>
+    <div class="logo-text"><a href="https://datamb.football"></a></div>
   </div>&nbsp;
   <nav class="navigation">
-   <a href="http://datamb.football/radars" class="button">Players</a>
-    <a href="http://datamb.football/join" class="button">Pro</a>
- <a href="http://datamb.football/teams" class="button">Teams</a>  
+   <a href="https://datamb.football/radars" class="button">Players</a>
+    <a href="https://datamb.football/join" class="button">Pro</a>
+ <a href="https://datamb.football/teams" class="button">Teams</a>  
   </nav>
   <div class="search-container">
     <button id="searchButton"><iconify-icon icon="ion:search-outline"></iconify-icon></button>
 </div>
   <a href="https://twitter.com/datamb_" target="_blank" class="twitter-link">
-    <svg width="25" height="24" fill="#bcbcbc" xmlns="http://www.w3.org/2000/svg">
+    <svg width="25" height="24" fill="#bcbcbc" xmlns="https://www.w3.org/2000/svg">
       <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
     </svg>
   </a>
@@ -738,9 +738,9 @@ function _0x5707(_0xd20fa7,_0x4d36b5){const _0x4dcd69=_0x4dcd();return _0x5707=f
 
 <body><br><br>
   <div class="button-container">
-    <a href="http://datamb.football/radars/" class="bouton image-1"></a>
-    <a href="http://datamb.football/join/" class="bouton image-2"></a>
-    <a href="http://datamb.football/teams/" class="bouton image-3"></a>
+    <a href="https://datamb.football/radars/" class="bouton image-1"></a>
+    <a href="https://datamb.football/join/" class="bouton image-2"></a>
+    <a href="https://datamb.football/teams/" class="bouton image-3"></a>
   </div><br>
 
 <div class="search-container2">
@@ -1027,7 +1027,7 @@ function removeDiacritics(str) {
       </nav>
       <nav>
         <a target="_blank" href="https://twitter.com/datamb_">
-          <svg width="23" height="22" fill="#000000" xmlns="http://www.w3.org/2000/svg">
+          <svg width="23" height="22" fill="#000000" xmlns="https://www.w3.org/2000/svg">
             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
           </svg>
         </a>
