--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ color: black;
 
 <div class="search-input-modal" id="searchInputModal">
   <div class="search-input-container">
-      <input type="text" id="searchInput" data-i18n-placeholder="search.placeholder2" placeholder="Enter a team or player name...">
+      <input type="text" id="searchInput" data-i18n="search.placeholder2" placeholder="Enter a team or player name...">
       <div id="autocompleteBox"></div>
   </div>
 </div>
@@ -838,7 +838,7 @@ function _0x5707(_0xd20fa7,_0x4d36b5){const _0x4dcd69=_0x4dcd();return _0x5707=f
   </div><br>
 
 <div class="search-container2">
-    <input type="text" id="searchInput2" class="search-input2" data-i18n-placeholder="search.placeholder" placeholder="Search for player or team..."> </div>
+    <input type="text" id="searchInput2" class="search-input2" data-i18n="search.placeholder" placeholder="Search for player or team..."> </div>
     <div id="autocompleteBox2"></div>
  
 
