--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ viewportMeta.setAttribute('content', 'width=device-width, initial-scale=' + init
      background-size: cover;
 }
  .image-2 {
-     background-image: url('https://datamb.football/homeimg/4freetrial.png');
+     background-image: url('https://datamb.football/homeimg/4.png');
      background-size: cover;
      background-color: #0e0f0f;
      border-radius: 10px;
