--- a/index.html
+++ b/index.html
@@ -839,11 +839,8 @@ body.dark-mode .search-input-container {
     color: #999;
 }
 
-body.dark-mode #autocompleteBoxmodal a, body.dark-mode #autocompleteBoxmodal2 a {
+body.dark-mode #autocompleteBoxmodal a, body.dark-mode #autocompleteBox2 a {
     color: var(--text-color) !important;
-}
-body.dark-mode #autocompleteBoxmodal a {
-    color: white !important;
 }
 
 
