--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ body.dark-mode #autocompleteBoxmodal a, body.dark-mode #autocompleteBox2 a {
 
   gtag('config', 'G-PSBMXX80EF');
 </script>
-
+<script async src="https://fundingchoicesmessages.google.com/i/pub-7677714701428206?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 </head>
 
 
